# advanced-python-training

./: -XPOST  .gitignore  README.md  echo_client.py  echo_server.py  requirements.txt  tests.bash
extra-asyncio/: echo_server.py
extra-fastapi/: main.py  pyproject.toml
extra-poetry/: pyproject.toml
extra-requests-aiohttp/: echo_client.py  echo_server_aiohttp.py  echo_server_requests.py  pyproject.toml
more-about-1/: assert_return_type.py  track_time.py
more-about-2/: fibonacci.py  inf_slice.py
more-about-3/: immutable.py  temp_files.py
more-about-4/: upper-attr.py
practice-11/: requirements.txt  tests.bash
practice-11/src/: main.py  make_celery.py
practice-11/src/echo/: usecase.py  wsgi_view.py
practice-11/src/monitored/: mongo_repository.py  psql_repository.py  sqlalchemy_repository.py  view.py
practice-11/src/myflask/: auth.py
practice-11/src/tasks/: show_message.py
practice-11/src/ticker/: ticker_view.py  usecase.py
practice-11/src/wsgi/: app.py  types.py
practice-12/: requirements.txt  tests.bash
practice-12/ticker/: db.sqlite3  manage.py
practice-12/ticker/monitored/: apps.py  models.py  serializers.py  views.py
practice-12/ticker/ticker/: asgi.py  settings.py  urls.py  wsgi.py
practice-2.1/: echo_client.py  echo_server.py
practice-3.1/: echo_server.py
practice-3.2/: echo_client.py  echo_server.py
practice-4/: echo_server.py
practice-5/: echo_server.py
practice-6.1/src/: main.py
practice-6.1/src/ticker/: wsgi_view.py
practice-9.1/: requirements.txt
src/echo/: flask_view.py
src/monitored/: monitored_model.py  monitored_view.py  sql_alchemy_model.py  usecase.py  view.py
src/myflask/: app.py  config.py
src/ticker/: usecase.py  wsgi_view.py
(+16 files in other folders)
