[tool.poetry]
name = "extra-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "extra_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
