[tool.poetry]
name = "extra-poetry"
version = "0.1.0"
description = "Asyncio echo server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "extra_poetry"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
